--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,12 +1,29 @@
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 480px) {
   body {
     margin: 36px 24px;
   }
 
   /* ############# Cabeçalho ############### */
+  section#cabecalho > header {
+    flex-direction: column;
+    align-items: center;
+    gap: 72px;
+  }
+
   section#cabecalho > header > nav > ul {
     display: flex;
     flex-direction: row;
     gap: 24px;
+  }
+
+  /* ############# Principal ############### */
+  section#principal > main > h2 {
+    text-align: center;
+  }
+
+  section#principal > main > div#biografia {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 32px;
   }
 }
