--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,8 @@ section#principal > main > h2 {
   color: var(--cor-secundaria);
 }
 
+/* ##### Biografia ##### */
+
 section#principal > main > div#biografia {
   display: flex;
 }
@@ -124,6 +126,35 @@ section#principal > main > div#biografia > div > img {
   height: 180px;
   border-radius: 50%;
 }
+
+/* ##### Comissão ##### */
+
+section#principal > main > div#comissao {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+section#principal > main > div#comissao > h2 {
+  font-size: 32px;
+  text-align: center;
+  color: var(--cor-secundaria);
+}
+
+section#principal > main > div#comissao > div#comissao_imagem {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+
+section#principal > main > div#comissao > div#comissao_imagem > img {
+  border: var(--cor-tercearia) 1px solid;
+  border-radius: 10px;
+  box-shadow: -3px 2px 10px var(--cor-secundaria);
+}
+
+/* ##### Artes ##### */
 
 section#principal > main > div#artes {
   display: flex;
@@ -170,6 +201,8 @@ section#principal > main > div#artes > div > div.card > img.card_imagem {
   border: var(--cor-secundaria) 1px solid;
   border-radius: 10px;
 }
+
+/* ##### Contato ##### */
 
 section#principal > main > div#contato {
   display: flex;
