--- a/css/mobile.css
+++ b/css/mobile.css
@@ -7,13 +7,20 @@
   section#cabecalho > header {
     flex-direction: column;
     align-items: center;
-    gap: 72px;
+    gap: 64px;
+    padding: 0 8px;
+  }
+
+  section#cabecalho > header > h1 {
+    font-size: 36px;
+    color: var(--cor-secundaria);
   }
 
   section#cabecalho > header > nav > ul {
     display: flex;
     flex-direction: row;
-    gap: 24px;
+    gap: 18px;
+    font-size: 16px;
   }
 
   /* ############# Principal ############### */
